Fixed code base and actually made it work

--- a/Onion.Web/Views/Account/ForgotPassword.cshtml
+++ b/Onion.Web/Views/Account/ForgotPassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Models.AccountViewModels
-@model Onion.Web.Models.AccountViewModels.ForgotPasswordViewModel
+﻿@model ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
 }
