--- a/Onion.Web/Views/Account/Login.cshtml
+++ b/Onion.Web/Views/Account/Login.cshtml
@@ -1,11 +1,6 @@
-﻿@using System.Collections.Generic
-@using System.Linq
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
-@using Microsoft.AspNetCore.Identity
+﻿@using System.Linq
 @using Onion.Repo.Identity
-@using Onion.Web.Models.AccountViewModels
-@model Onion.Web.Models.AccountViewModels.LoginViewModel
+@model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
