--- a/Onion.Web/Views/Account/LoginWith2fa.cshtml
+++ b/Onion.Web/Views/Account/LoginWith2fa.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Models.AccountViewModels
-@model Onion.Web.Models.AccountViewModels.LoginWith2faViewModel
+﻿@model LoginWith2faViewModel
 @{
     ViewData["Title"] = "Two-factor authentication";
 }
