--- a/Onion.Web/Views/Account/Register.cshtml
+++ b/Onion.Web/Views/Account/Register.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Models.AccountViewModels
-@model RegisterViewModel
+﻿@model RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
