--- a/Onion.Web/Views/Account/ResetPassword.cshtml
+++ b/Onion.Web/Views/Account/ResetPassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Models.AccountViewModels
-@model Onion.Web.Models.AccountViewModels.ResetPasswordViewModel
+﻿@model ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
 }
