--- a/Onion.Web/Views/Manage/ChangePassword.cshtml
+++ b/Onion.Web/Views/Manage/ChangePassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Views.Manage
-@model ChangePasswordViewModel
+﻿@model ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
