--- a/Onion.Web/Views/Manage/EnableAuthenticator.cshtml
+++ b/Onion.Web/Views/Manage/EnableAuthenticator.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Views.Manage
-@model EnableAuthenticatorViewModel
+﻿@model EnableAuthenticatorViewModel
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
