--- a/Onion.Web/Views/Manage/ExternalLogins.cshtml
+++ b/Onion.Web/Views/Manage/ExternalLogins.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Views.Manage
-@model ExternalLoginsViewModel
+﻿@model ExternalLoginsViewModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
