--- a/Onion.Web/Views/Manage/GenerateRecoveryCodes.cshtml
+++ b/Onion.Web/Views/Manage/GenerateRecoveryCodes.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Views.Manage
-@model GenerateRecoveryCodesViewModel
+﻿@model GenerateRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
