--- a/Onion.Web/Views/Manage/Index.cshtml
+++ b/Onion.Web/Views/Manage/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Views.Manage
-@model IndexViewModel
+﻿@model IndexViewModel
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
