--- a/Onion.Web/Views/Manage/SetPassword.cshtml
+++ b/Onion.Web/Views/Manage/SetPassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Views.Manage
-@model SetPasswordViewModel
+﻿@model SetPasswordViewModel
 @{
     ViewData["Title"] = "Set password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
