--- a/Onion.Web/Views/Manage/_ManageNav.cshtml
+++ b/Onion.Web/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,6 @@
-﻿@using Onion.Web.Views.Manage
+﻿@using System.Linq
+@using Microsoft.AspNetCore.Identity
+@using Onion.Repo.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
