--- a/Onion.Web/Views/_ViewImports.cshtml
+++ b/Onion.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
+@using Microsoft.AspNetCore.Identity
 @using Onion.Web
 @using Onion.Web.Models
+@using Onion.Web.Models.AccountViewModels
+@using Onion.Web.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
