--- a/Onion.Web/Views/Account/ExternalLogin.cshtml
+++ b/Onion.Web/Views/Account/ExternalLogin.cshtml
@@ -1,5 +1,4 @@
-﻿@using Onion.Web.Models.AccountViewModels
-@model ExternalLoginViewModel
+﻿@model ExternalLoginViewModel
 @{
     ViewData["Title"] = "Register";
 }
