Adding ViewModel namespace to views to fix issue with publishing solution

--- a/Onion.Web/Features/Manage/Index.cshtml
+++ b/Onion.Web/Features/Manage/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Onion.Web.Features.Manage
+@using Onion.Web.Features.Manage.ViewModels
 @model IndexViewModel
 @{
     ViewData["Title"] = "Profile";
