--- a/Onion.Web/Features/Manage/ChangePassword.cshtml
+++ b/Onion.Web/Features/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Onion.Web.Features.Manage
+@using Onion.Web.Features.Manage.ViewModels
 @model ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change password";
