--- a/Onion.Web/Features/Manage/TwoFactorAuthentication.cshtml
+++ b/Onion.Web/Features/Manage/TwoFactorAuthentication.cshtml
@@ -1,4 +1,5 @@
 @using Onion.Web.Features.Manage
+@using Onion.Web.Features.Manage.ViewModels
 @model TwoFactorAuthenticationViewModel
 @{
     ViewData["Title"] = "Two-factor authentication";
